# Lightly

./: .gitignore  CMakeLists.txt  README.md  org.kde.KStyle.Lightly.5.15-23.08.json  org.kde.KStyle.Lightly.6.6.json  org.kde.KStyle.Lightly.json
kstyle/: CMakeLists.txt
